--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/sushi-6.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Sushi</title>
+    <title>Sushi Bhoj</title>
   </head>
   <body>
     <header>
